[gd_scene load_steps=2 format=2]

[ext_resource path="res://Widget/TypeAttributes/TileTypeAtt.gd" type="Script" id=1]

[node name="TileTypeAtt" type="VBoxContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 325.0
margin_bottom = 31.0
script = ExtResource( 1 )

[node name="Row1" type="HBoxContainer" parent="."]
margin_right = 318.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="Row1"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Pickable :"
align = 2

[node name="PickableCheckBox" type="CheckBox" parent="Row1"]
margin_left = 110.0
margin_right = 134.0
margin_bottom = 25.0

[node name="Row2" type="HBoxContainer" parent="."]
margin_top = 29.0
margin_right = 318.0
margin_bottom = 54.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="Row2"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Turn limit :"
align = 2

[node name="TurnlimitSpinBox" type="SpinBox" parent="Row2"]
margin_left = 110.0
margin_right = 184.0
margin_bottom = 25.0
rounded = true
align = 1

[node name="Row3" type="HBoxContainer" parent="."]
margin_top = 58.0
margin_right = 318.0
margin_bottom = 83.0
rect_min_size = Vector2( 0, 25 )
custom_constants/separation = 10

[node name="Label" type="Label" parent="Row3"]
margin_top = 5.0
margin_right = 100.0
margin_bottom = 19.0
rect_min_size = Vector2( 100, 0 )
text = "Trigger limit :"
align = 2

[node name="TriggerlimitSpinBox" type="SpinBox" parent="Row3"]
margin_left = 110.0
margin_right = 184.0
margin_bottom = 25.0
rounded = true
align = 1

